--- a/special-design/css/master.css
+++ b/special-design/css/master.css
@@ -355,6 +355,11 @@ html::-webkit-scrollbar-track {
   animation: control-width 3s steps(14) 3.5s both, blink 0.5s infinite;
   font-size: 24px;
 }
+@media (max-width: 400px) {
+  .header-area .logo p {
+    font-size: 13px;
+  }
+}
 .header-area .logo p::before {
   content: attr(data-logo);
   position: absolute;
@@ -389,6 +394,11 @@ html::-webkit-scrollbar-track {
   width: 100%;
   border-radius: 4px;
   text-align: center;
+}
+@media (max-width: 400px) {
+  .header-area .links.open {
+    top: 59px;
+  }
 }
 .header-area .links.open li {
   display: block;
@@ -472,6 +482,11 @@ html::-webkit-scrollbar-track {
     font-size: 26px !important;
   }
 }
+@media (max-width: 400px) {
+  .introduction-text h1 {
+    font-size: 22px !important;
+  }
+}
 .introduction-text .h-box {
   width: fit-content;
 }
@@ -540,9 +555,12 @@ html::-webkit-scrollbar-track {
   background-color: var(--main-color);
   border-color: var(--main-color);
 }
-/* @media (max-width: 991px) { */
-
-/* } */
+@media (max-width: 991px) {
+  .landing-page .bullets-background li {
+    height: 15px;
+    width: 15px;
+  }
+}
 /* End Landing Page */
 /* Start About Us */
 .about-us .info-box h2 {
@@ -1049,6 +1067,12 @@ footer .main-btn:hover span {
 }
 /* End Footer */
 /* Start Grid System break points */
+@media (max-width: 400px) {
+  /* XSmall Devices => Landscape */
+  .container {
+    max-width: 350px;
+  }
+}
 @media (min-width: 576px) {
   /* Small Devices => Landscape */
   .container {
