--- a/special-design/css/master.css
+++ b/special-design/css/master.css
@@ -611,6 +611,16 @@ html::-webkit-scrollbar-track {
   width: 200px;
   cursor: pointer;
 }
+@media (max-width: 767px) {
+  .gallery .images-box img {
+    width: 240px;
+  }
+}
+@media (max-width: 500px) {
+  .gallery .images-box img {
+    width: 300px;
+  }
+}
 .popup-box .image-heading {
   font-weight: bold;
   text-align: center;
